# signalwire-c

./: .drone.yml  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  Dockerfile  README  copyright  scan.sh  scan_build.sh  signalwire_client.pc.in  swclt_bench.cfg  swclt_test.cfg  swclt_test_bad.cfg  swclt_testuncert.cfg
.github/docker/centos/7/amd64/: Dockerfile
.github/docker/debian/bookworm/amd64/: Dockerfile  prerelease.Dockerfile  release.Dockerfile
.github/docker/debian/bookworm/arm32v7/: Dockerfile  release.Dockerfile
.github/docker/debian/bookworm/arm64v8/: Dockerfile  release.Dockerfile
.github/docker/debian/bullseye/amd64/: Dockerfile  fsa.Dockerfile  prerelease.Dockerfile
.github/docker/debian/bullseye/arm32v7/: Dockerfile  fsa.Dockerfile  prerelease.Dockerfile
.github/docker/debian/bullseye/arm64v8/: Dockerfile  public.Dockerfile  release.Dockerfile
.github/docker/debian/buster/amd64/: Dockerfile
.github/docker/debian/buster/arm32v7/: Dockerfile
.github/docker/debian/buster/arm64v8/: Dockerfile
.github/docker/debian/trixie/amd64/: fsa.Dockerfile  prerelease.Dockerfile
.github/docker/debian/trixie/arm32v7/: Dockerfile  release.Dockerfile
.github/docker/debian/trixie/arm64v8/: public.Dockerfile  release.Dockerfile
.github/workflows/: build.yml  ci.yml  cicd.yml  macos.yml  windows.yml
cmake/: FindLibKS.cmake  cotire.cmake
examples/client/: CMakeLists.txt  README  main.c
inc/signalwire-client-c/: client.h  command.h  config.h  connection.h  export.h  handle_base.h  handle_manager.h  handle_monitor.h  handle_state.h  handle_type.h  handles.h  identity.h  init.h  nodestore.h  pmethod.h  session.h  ssl.h  subscription.h  version.h.in
inc/signalwire-client-c/JSON/: macros.h
inc/signalwire-client-c/blade/: blade.h  broadcast.h  connect.h  disconnect.h  execute.h  identity.h  netcast.h  ping.h  protocol.h  subscription.h  type.h  util.h
inc/signalwire-client-c/internal/: command.h  config.h  connection.h  handle_monitor.h  nodestore.h  session.h  subscription.h
inc/signalwire-client-c/signalwire/: calling.h  messaging.h  provisioning.h  signalwire.h
inc/signalwire-client-c/transport/: frame.h  websocket.h
inc/signalwire-client-c/transport/internal/: frame.h  websocket.h
src/: command.c  config.c  connection.c  handle_manager.c  handle_monitor.c  handle_state.c  identity.c  init.c  nodestore.c  session.c  ssl.c  subscription.c
src/transport/: frame.c  websocket.c
swclt_bench/: CMakeLists.txt  main.c
swclt_test/: CMakeLists.txt  main.c  swclt_test.h
swclt_test/cases/: callback.c  calling.c  command.c  connection.c  execute.c  frame.c  hmanager.c  json.c  messaging.c  nodestore.c  session.c  uncert.c  websocket.c
swclt_test/cfg/: swclt_bench.cfg
swclt_test/util/: handle.h  ssl.h
win/: .gitignore  build.cmd  buildpackages.task  downloadpackage.task  libks-version.props  libks.props  signalwire-client-c-version.props  signalwire-client-c.2017.sln  signalwire-client-c.2017.vcxproj  signalwire-client-c.sln  signalwire-client-c.vcxproj
